# session-guard

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: hooks.rs  main.rs  paths.rs  process.rs  scan.rs  sessions.rs  transcripts.rs
src/adapters/: alacritty.rs  ghostty.rs  iterm2.rs  kitty.rs  mod.rs  terminal_app.rs  wezterm.rs
src/commands/: daemon.rs  deregister.rs  install.rs  install_hooks.rs  mod.rs  register.rs  restore.rs  status.rs  uninstall.rs
