[package]
name = "session-guard"
version = "0.1.0"
edition = "2024"
description = "Track active Claude Code and Codex CLI sessions and restore them after a macOS crash or reboot."
license = "GPL-3.0-only"
repository = "https://github.com/tylerlaprade/session-guard"
homepage = "https://github.com/tylerlaprade/session-guard"
readme = "README.md"
authors = ["Tyler Laprade <tyler@tylerlaprade.com>"]
keywords = ["claude", "codex", "session", "macos", "restore"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
fs2 = "0.4"
libc = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
signal-hook = "0.3"
toml = "0.8"

[dev-dependencies]
tempfile = "3"
